fixed a bug with super and this method calls in CallTreeMCodeInterpreter. -NM